Data analysis page-Date selection

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -430,7 +430,7 @@ input[type="checkbox"] {
   transition: all 0.1s linear;
 }
 input[type="checkbox"]:checked {
-  background: url(../img/check-mark.png) #394e64 center no-repeat;
+  background: url("check-mark.png") #394e64 center no-repeat;
 }
 input[type="checkbox"]:focus {
   outline: 0 none;
@@ -486,7 +486,7 @@ input[type="checkbox"]:focus {
   -o-border-radius: 0;
   border-radius: 0;
   padding: 15px;
-  background: url(../img/arrow-down.png) 98% no-repeat #50657b;
+  background: url("arrow-down.png") 98% no-repeat #50657b;
 }
 .custom-select:focus {
   outline: 0;
